[gd_scene load_steps=4 format=3 uid="uid://e1xvwg431y0w"]

[ext_resource type="Script" path="res://scripts/root.gd" id="1_bkpr8"]
[ext_resource type="Script" path="res://addons/planetary_processing/pp_root_node.gd" id="1_y07hn"]

[sub_resource type="Environment" id="Environment_agl5h"]
background_color = Color(2.76962e-05, 0.00208671, 0.0461248, 1)
background_energy_multiplier = 1.3
fog_enabled = true
fog_mode = 1
fog_density = 1.0
volumetric_fog_enabled = true
volumetric_fog_albedo = Color(0.169245, 0.169245, 0.169245, 1)

[node name="main" type="Node3D"]
script = ExtResource("1_bkpr8")

[node name="PPRootNode" type="Node" parent="."]
script = ExtResource("1_y07hn")
game_id = "7833"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_agl5h")

[connection signal="player_connected" from="PPRootNode" to="." method="_on_pp_root_node_player_connected"]
[connection signal="player_disconnected" from="PPRootNode" to="." method="_on_pp_root_node_player_disconnected"]
[connection signal="player_unauthenticated" from="PPRootNode" to="." method="_on_pp_root_node_player_unauthenticated"]
